Implement PlaylistRepository
* Use reflection to instantiate domain type from ResultSet
* Change `id` field type in Playlist and Track to `int` to match
  datastore (necessary to make queries/reflection work without
  nasty workarounds)
* Implement `equals(Object)` and `hashCode()` for domain types using
  business key (necessary for tests)
* Add copy constructor for domain types (necessary for tests)
* Rearrange fields and rename static variables to improve readability
* Add SQL script for Playlist and related tables